syntax = "proto3";

package nftmeta.v1.transfer;

option go_package = "github.com/web3eye-io/cyber-tracer/proto/cybertracer/nftmeta/v1/transfer";
import "cybertracer/cybertracer.proto";

service Manager {
  rpc CreateTransfer(CreateTransferRequest) returns (CreateTransferResponse) {}
  rpc CreateTransfers(CreateTransfersRequest)
      returns (CreateTransfersResponse) {}
  rpc UpdateTransfer(UpdateTransferRequest) returns (UpdateTransferResponse) {}
  rpc GetTransfer(GetTransferRequest) returns (GetTransferResponse) {}
  rpc GetTransferOnly(GetTransferOnlyRequest)
      returns (GetTransferOnlyResponse) {}
  rpc GetTransfers(GetTransfersRequest) returns (GetTransfersResponse) {}
  rpc ExistTransfer(ExistTransferRequest) returns (ExistTransferResponse) {}
  rpc ExistTransferConds(ExistTransferCondsRequest)
      returns (ExistTransferCondsResponse) {}
  rpc CountTransfers(CountTransfersRequest) returns (CountTransfersResponse) {}
  rpc DeleteTransfer(DeleteTransferRequest) returns (DeleteTransferResponse) {}
}

message TransferReq {
  optional string ID = 10;
  optional string ChainType = 20;
  optional int32 ChainID = 30;
  optional string Contract = 40;
  optional string TokenType = 50;
  optional string TokenID = 60;
  optional string From = 70;
  optional string To = 80;
  optional uint64 Amount = 90;
  optional uint64 BlockNumber = 100;
  optional string TxHash = 110;
  optional string BlockHash = 120;
  optional uint32 TxTime = 130;
  optional string Remark = 140;
}

message Transfer {
  string ID = 10;
  string ChainType = 20;
  int32 ChainID = 30;
  string Contract = 40;
  string TokenType = 50;
  string TokenID = 60;
  string From = 70;
  string To = 80;
  uint64 Amount = 90;
  uint64 BlockNumber = 100;
  string TxHash = 110;
  string BlockHash = 120;
  uint32 TxTime = 130;
  string Remark = 140;
}

message Conds {
  cybertracer.StringVal ID = 10;
  cybertracer.StringVal ChainType = 20;
  cybertracer.Int32Val ChainID = 30;
  cybertracer.StringVal Contract = 40;
  cybertracer.StringVal TokenType = 50;
  cybertracer.StringVal TokenID = 60;
  cybertracer.StringVal From = 70;
  cybertracer.StringVal To = 80;
  cybertracer.Uint64Val Amount = 90;
  cybertracer.Uint64Val BlockNumber = 100;
  cybertracer.StringVal TxHash = 110;
  cybertracer.StringVal BlockHash = 120;
  cybertracer.Uint32Val TxTime = 130;
  cybertracer.StringVal Remark = 140;
  cybertracer.StringSliceVal IDs = 150;
}

message CreateTransferRequest { TransferReq Info = 10; }

message CreateTransferResponse { Transfer Info = 10; }

message CreateTransfersRequest { repeated TransferReq Infos = 10; }

message CreateTransfersResponse { repeated Transfer Infos = 10; }

message GetTransferRequest { string ID = 10; }

message GetTransferResponse { Transfer Info = 10; }

message GetTransfersRequest {
  Conds Conds = 10;
  int32 Offset = 20;
  int32 Limit = 30;
}

message GetTransfersResponse {
  repeated Transfer Infos = 10;
  uint32 Total = 20;
}

message GetTransferOnlyRequest { Conds Conds = 10; }

message GetTransferOnlyResponse { Transfer Info = 10; }

message UpdateTransferRequest { TransferReq Info = 10; }

message UpdateTransferResponse { Transfer Info = 10; }

message ExistTransferRequest { string ID = 10; }

message ExistTransferResponse { bool Info = 10; }

message ExistTransferCondsRequest { Conds Conds = 10; }

message ExistTransferCondsResponse { bool Info = 10; }

message CountTransfersRequest { Conds Conds = 10; }

message CountTransfersResponse { uint32 Info = 10; }

message DeleteTransferRequest { string ID = 10; }

message DeleteTransferResponse { Transfer Info = 10; }
